  file have to be separated by NUL characters.

** Changes in locate / updatedb

  update now skips (fuse-mounted) s3fs filesystems by default,
  i.e., unless PRUNEFS is set.

** Bug Fixes

  'find -D stat -L ...' no longer determines SELinux security information as
  if the -L option was not given.
  [Bug present since the SELinux implementation in 4.5.6]

** Documentation Changes

  The find.1 man page and the Texinfo manual now show environment variables
  in a consistent style. [#59963]
  Furthermore, both add the description of the -printf format directive '%B',
  for a file's birth time, and its limitations. [#61327]

  The output of 'find --help' now reads better.

  The HTML online manual is using the official GNU stylesheet again.

** Changes to the build process

  The find version without FTS, oldfind, has been completely removed.  It has
  not been installed since 4.5.18 (2015), and was only still used in tests.

* Noteworthy changes in release 4.8.0 (2020-01-09) [stable]

** Changes in xargs

'xargs -t' no longer outputs a trailing blank to stderr after the last argument
of each constructed command line to be executed.  [#57291]

xargs now warns when more than one of the conflicting options --max-lines (-L,
-l), --replace (-i/-I) and --max-args (-n) are specified on the command line.
[#52137]

** Bug Fixes

find no longer crashes when an XFS filesystem is heavily changed during the run.
Discussed at: <https://lists.gnu.org/r/bug-gnulib/2020-04/msg00068.html>

find -used works again.  This predicate was not working properly since adding
the support for sub-second timestamp resolution for various predicates in
FINDUTILS_4_3_3-1 back in 2007.
Discussed at: <https://lists.gnu.org/r/bug-findutils/2019-11/msg00010.html>

** Improvements

'find -D exec' now diagnoses all -exec, -execdir, -ok and -okdir runs including
the call arguments and the exit code of the launched process. [#59083]

** Documentation Changes
